<resources>
    <string name="app_name">Party Rock</string>

    <string name="action_settings">Settings</string>

    <string name="Rent">Rent</string>
    <string name="rent_text">Throw your party here for: </string>
    <string name="location_hint_text">Where is this happening?</string>
    <string name="price">Price</string>
    <string name="price_text">I\'m not paying more than</string>
    <string name="alt_price_text">I\'m paying more than</string>
    <string name="capacity_search_text">I need room for</string>
    <string name="search_text">Go find it!</string>
    <string name="rent_confirmation_text">Confirm Rent</string>
    <string name="previous_item">previous_item</string>
    <string name="next_item">next item</string>
    <string name="rent">Rent</string>
    <string name="venue_image">Venue image</string>
    <string name="description_sample">Sample description</string>
    <string name="venue_rating">Venue rating</string>
    <string name="sample_cost">$9999</string>
    <string name="capacity">Capacity</string>
    <string name="sample_distance">9999m away</string>
    <string name="house_image">House Image</string>
    <string name="venue">Place</string>
    <string name="persons">persons</string>
    <string name="TOS_alert">If you agree to our ToS, review your pay form and go ahead with your party!</string>
    <string name="date_alert">You have selected this place to rent it on the following date:</string>

    <string name="address">Address</string>
    <string name="municipality">Municipality</string>
    <string name="distance">Distance</string>
    <string name="share">Share</string>
    <string name="txt_party_date">Please, select the date of your event:</string>
    <string name="txt_party_share">Check out this house at Party Rock!</string>
    <string name="txt_share">Share with:</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="title_activity_view_pager_full_screen">ViewPagerFullScreenActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="shared_preferences">PartyRockPreferences</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Address">Address</string>
    <string name="search">Search</string>
    <string name="get_out_text">Not for me</string>
    <string name="ok_text">Cool</string>
    <string name="features_detail_text_button">Check details</string>
    <string name="description_title">Description</string>
    <string name="features_title_text"><![CDATA[Features & Rules]]></string>
    <string name="location_title_text">Location</string>
</resources>
