<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:paddingEnd="32dp"
    android:paddingStart="32dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/half_vertical_margin"
        android:layout_marginStart="@dimen/half_vertical_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_attach_money_black_24dp" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center"
            android:text="@string/price"
            android:singleLine="true"
            android:textSize="@dimen/abc_text_size_medium_material"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/half_vertical_margin"
        android:layout_marginStart="@dimen/half_vertical_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_capacity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@mipmap/ic_people_black" />

        <TextView
            android:id="@+id/txt_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center"
            android:singleLine="true"
            android:text="@string/capacity"
            android:textSize="@dimen/abc_text_size_medium_material"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/half_vertical_margin"
        android:layout_marginStart="@dimen/half_vertical_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_distance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@mipmap/ic_place_black" />

        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center"
            android:singleLine="true"
            android:text="@string/distance"
            android:textSize="@dimen/abc_text_size_medium_material"/>

    </LinearLayout>


</LinearLayout>


