<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/btn_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Pimp your party!"
                android:textColor="@color/accent"
                android:textSize="@dimen/abc_text_size_large_material" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/style_text_border"
                    android:ems="10"
                    android:hint="@string/location_hint_text"
                    android:inputType="textAutoComplete"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textColorHighlight="#fff"
                    android:textColorHint="#000"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/text_view_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="5dp"
                android:text="@string/price_text"
                android:textSize="@dimen/abc_text_size_medium_material" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/money_less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_coins" />

                <SeekBar
                    android:id="@+id/price_slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/money_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_money" />


            </LinearLayout>

            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/price"
                android:textColor="@color/accent"
                android:textSize="@dimen/abc_text_size_large_material" />


            <TextView
                android:id="@+id/text_view_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/people"
                android:textSize="@dimen/abc_text_size_medium_material" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/people_less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_people_few" />


                <SeekBar
                    android:id="@+id/people_slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/people_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_people_black" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/capacity"
                android:textColor="@color/accent"
                android:textSize="@dimen/abc_text_size_large_material" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@color/green"
        android:text="@string/search_text"
        android:textColor="@color/white" />

</FrameLayout>