<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/previous_item"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/previous_item"
                    android:src="@mipmap/ic_launcher" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/venue_images"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/next_item"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/next_item"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/feature1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:id="@+id/feature2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:id="@+id/feature3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <ImageView
                android:id="@+id/map_location"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/green"
        android:text="@string/rent"
        android:textColor="@color/white"/>

</LinearLayout>